--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
   <!-- END OF HERO-->
 <!-- END OF PROGRESS BAR-->
   <!--HERO-->
-  <section id="home" data-hero class="section welcome-section">
+  <section id="home" data-hero class="banner index-banner">
     <div class="hero">
-      <div id="hero-content">
+      <div class="hero-content">
         <div class="hero-title">
           <h1 class="hero-title-header"><a href="#main">Front-end web developer</a></h1>
           <p class="hero-description">
