--- a/pages/about.html
+++ b/pages/about.html
@@ -133,9 +133,9 @@
     <!-- END OF HERO-->
     <!-- END OF PROGRESS BAR-->
     <!--HERO-->
-    <section id="home" data-hero class="section welcome-section ">
+    <section id="home" data-hero class="banner about-banner">
         <div class="hero">
-            <div id="hero-content">
+            <div class="hero-content">
                 <div class="hero-title">
                     <h1 class="hero-title-header"><a href="#main">Front-end web developer</a></h1>
                     <p class="hero-description">
@@ -438,7 +438,7 @@
             <a href="https://wa.me/+27716876941"><i class="fa-brands fa-whatsapp"></i>WhatsApp</a>
         </figure>
         <figure class="link-item io-item item io-item-2">
-            <a href="#home"><i class="fas fa-house"></i>home</a>
+            <a href="../index.html"><i class="fas fa-house"></i>home</a>
         </figure>
         <figure class="link-item io-item item io-item-3">
             <a href="mailto:bshakex@gmail.com"><i class="fas fa-envelope"></i>email</a>
