skills page hero

--- a/index.html
+++ b/index.html
@@ -190,8 +190,12 @@
         </div>
         <!--Dropdown-->
         <div class="dropdown" id="dropdown">
-          <button onclick="dropdown()" data-dropBtn title="View Full Skill-set" class="dropbtn cta">My Skills<i
-              class="fa-solid fa-caret-down"></i></button>
+          <div class="buttons-container">
+            <button onclick="dropdown()" data-dropBtn title="View Full Skill-set" class="dropbtn skills-cta">My Skills<i
+                class="fa-solid fa-caret-down"></i></button>
+                <a title="Skills Page" href="pages/skills.html" class="skills-cta page-cta">Skills Page<i
+                  class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
           <div id="myDropdown" class="dropdown-content">
             <div class="top-btn" id="top-btn"><a href="#work" class="fa-solid fa-circle-xmark"></a></div>
 
