--- a/pages/skills.html
+++ b/pages/skills.html
@@ -12,7 +12,7 @@
     <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-sempe-logo.png">
 
     <!-- TITLE -->
-    <title>Shakex Sempe || Web Development Skills</title>
+    <title>Shakex Sempe || Web Development Skills Page</title>
     <!--  -->
     <!-- META DESCRIPTION -->
     <meta name="description"
@@ -114,9 +114,9 @@
   <!-- END OF HERO-->
 
   <!--HERO-->
-  <section id="home" data-hero class="section welcome-section">
+  <section id="home" data-hero class="banner index-banner">
     <div class="hero">
-      <div id="hero-content">
+      <div class="hero-content">
         <div class="hero-title">
           <h1 class="hero-title-header"><a href="#main">Front-end web developer</a></h1>
           <p class="hero-description">
