--- a/index.html
+++ b/index.html
@@ -567,8 +567,12 @@
             <div class="about-intro io-item">
             <p class="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and Front-End Web
               Developer specializing in Responsive Web Design and User Experience.
-              <a href="mailto:bshakex@gmail.com?subject=CV Request" class="cv">Request CV</a>
             </p>
+          </div>
+          <div class="buttons-container">
+            <a href="pages/about.html" class="btn btn-primary">About Page<i class="fas fa-arrow-up-right-from-square"></i></a>
+            <a href="mailto:bshakex@gmail.com?subject=CV Request" class="btn btn-secondary">Request CV<i class="fas fa-envelope"></i></a>
+
           </div>
             <div class="about-body io-item">
             <p>
