--- a/index.html
+++ b/index.html
@@ -747,8 +747,8 @@
             <li><a href="#">home</a></li>
             <li><i class="fas fa-arrow-up-right-from-square"></i><a href="pages/about.html">about</a></li>
             <li><i class="fas fa-arrow-up-right-from-square"></i><a href="pages/skills.html">skills</a></li>
-            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#work">work</a></li>
-            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#projects">portfolio</a></li>
+            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="pages/work.html">projects</a></li>
+            <!-- <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#projects">portfolio</a></li> -->
           </ul>
         </div>
         <div class="footer-item">
