--- a/pages/work.html
+++ b/pages/work.html
@@ -498,8 +498,7 @@
                             <li><a href="../index.html">home</a></li>
                             <li><i class="fas fa-arrow-up-right-from-square"></i><a href="skills.html">skills</a>
                             </li>
-                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#work">work</a></li>
-                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="projects.html">portfolio</a>
+                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="about.html">about</a></li>
                             </li>
                         </ul>
                     </div>
