--- a/pages/about.html
+++ b/pages/about.html
@@ -408,8 +408,8 @@
                             <li><a href="../index.html">home</a></li>
                             <li><i class="fas fa-arrow-up-right-from-square"></i><a href="skills.html">skills</a>
                             </li>
-                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#work">work</a></li>
-                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="projects.html">portfolio</a></li>
+                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="work.html">projects</a></li>
+                            <!-- <li><i class="fas fa-arrow-up-right-from-square"></i><a href="projects.html">portfolio</a></li> -->
                         </ul>
                     </div>
                     <div class="footer-item">
