--- a/pages/skills.html
+++ b/pages/skills.html
@@ -215,7 +215,7 @@
           <div class="skill-section section-1">
             <div class="skill-section-title">
               <h3>web accessibility & <br> responsive web design</h3>
-              <p>website that provides a good User Experience and look good on all devices.</p>
+              <p>websites that provides a good User Experience and look good on all devices.</p>
             </div>
             <div class="skill-section-content">
               <article class="skill-article">
