--- a/pages/skills.html
+++ b/pages/skills.html
@@ -215,12 +215,14 @@
           <div class="skill-section section-1">
             <div class="skill-section-title">
               <h3>web accessibility & <br> responsive web design</h3>
-              <p>websites that provides a good User Experience and look good on all devices.</p>
+              <p>websites that provide a good User Experience and look good on all devices.</p>
             </div>
             <div class="skill-section-content">
               <article class="skill-article">
+                <div class="skill-title">
                 <i class="fab fa-html5" alt="icon"></i>
                 <h4>HTML-5</h4>
+              </div>
                 <ul>
                   <li>Applied Visual Design</li>
                   <li>Semantic Markup</li>
