--- a/pages/skills.html
+++ b/pages/skills.html
@@ -213,16 +213,17 @@
 
         <div class="skill-section-container">
           <div class="skill-section section-1">
-            <div class="skill-section-title">
+            <div class="skill-section-title section-title-1">
               <h3>web accessibility & <br> responsive web design</h3>
               <p>websites that provide a good User Experience and look good on all devices.</p>
             </div>
             <div class="skill-section-content">
+
               <article class="skill-article">
                 <div class="skill-title">
-                <i class="fab fa-html5" alt="icon"></i>
-                <h4>HTML-5</h4>
-              </div>
+                  <i class="fab fa-html5" alt="icon"></i>
+                  <h4>HTML-5</h4>
+                </div>
                 <ul>
                   <li>Applied Visual Design</li>
                   <li>Semantic Markup</li>
@@ -230,18 +231,76 @@
                   <li>Form Elements</li>
                 </ul>
               </article>
+
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fab fa-css3-alt"></i>
+                  <h4>CSS-3</h4>
+                </div>
+                <ul>
+                  <li>Animations & Transitions</li>
+                  <li>Flexbox & Grid Layout</li>
+                  <li>Responsive Web Design</li>
+                </ul>
+              </article>
+
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fab fa-js-square"></i>
+                  <h4>Javascript</h4>
+                </div>
+                <ul>
+                  <li>Basic Algorithm Scripting</li>
+                  <li>ES6 Fundamentals</li>
+                  <li>beginner Typescript</li>
+                  <li>JSon</li>
+                </ul>
+              </article>
+
             </div>
           </div>
 
           <div class="skill-section section-2">
-            <div class="skill-section-title">
+            <div class="skill-section-title section-title-2">
               <h3>immersive Interface &<br>Engaging Experience</h3>
+              <p>websites that provide a good User Experience and look good on all devices.</p>
             </div>
             <div class="skill-section-content">
+
               <article class="skill-article">
-                <h4>Sass preprocessed CSS-3</h4>
-                <p>user friendly User Interface that looks good on all devices.</p>
+                <div class="skill-title">
+                  <i class="fab fa-sass" alt="icon"></i>
+                  <h4>Sass</h4>
+                </div>
+                <ul>
+                  <li>Nested Rules</li>
+                  <li>Mixins and Functions</li>
+                  <li>_Partials</li>
+                </ul>
               </article>
+
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fab fa-react"></i>
+                  <h4>React JS</h4>
+                </div>
+                <ul>
+                  <li>React Fundamentals</li>
+                </ul>
+              </article>
+
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fab fa-js-square"></i>
+                  <h4>Jquery</h4>
+                </div>
+                <ul>
+                  <li>Event Handling</li>
+                  <li>DOM manipulation</li>
+
+                </ul>
+              </article>
+
             </div>
           </div>
         </div>
