--- a/pages/skills.html
+++ b/pages/skills.html
@@ -303,6 +303,49 @@
 
             </div>
           </div>
+
+          <div class="skill-section section-3 light-section">
+            <div class="skill-section-title section-title-3">
+              <h3>Version Control &<br>Back-End</h3>
+              <p>websites that provide a good User Experience and look good on all devices.</p>
+            </div>
+            <div class="skill-section-content">
+
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fab fa-git-alt" alt="icon"></i>
+                  <h4>Git</h4>
+                </div>
+                <ul>
+                  <li>Version Control</li>
+                </ul>
+              </article>
+
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fab fa-github"></i>
+                  <h4>github</h4>
+                </div>
+                <ul>
+                  <li>Repository Management</li>
+                </ul>
+              </article>
+
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fab fa-node-js"></i>
+                  <h4>Node JS</h4>
+                </div>
+                <ul>
+                  <li>Node Package Manager</li>
+                  <li>express JS</li>
+
+                </ul>
+              </article>
+
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
