--- a/pages/skills.html
+++ b/pages/skills.html
@@ -306,7 +306,7 @@
 
           <div class="skill-section section-3 light-section">
             <div class="skill-section-title section-title-3">
-              <h3>Version Control &<br>Back-End</h3>
+              <h3>Version Control &<br>development tools</h3>
               <p>websites that provide a good User Experience and look good on all devices.</p>
             </div>
             <div class="skill-section-content">
@@ -343,6 +343,37 @@
                 </ul>
               </article>
 
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fa-brands fa-hive"></i>
+                  <h4>Netlify</h4>
+                </div>
+                  <ul>
+                    <li>Static websites</li>
+                    <li>Responsive websites </li>
+                  </ul>
+              </article>
+
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fa-solid fa-laptop-code"></i>
+                  <h4>Visual Studio Code</h4>
+                </div>
+                <ul>
+                    <li>Code Editing</li>
+                    <li>Development Servers</li>
+                </ul>
+              </article>
+
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fa-brands fa-wordpress"></i>
+                  <h4>WordPress</h4>
+                </div>
+                <ul>
+                      <li>e-commerce site</li>
+                </ul>
+              </article>
             </div>
           </div>
 
