--- a/pages/skills.html
+++ b/pages/skills.html
@@ -377,6 +377,39 @@
             </div>
           </div>
 
+          <div class="skill-section section-4 light-section">
+            <div class="skill-section-title section-title-4">
+              <h3>Soft Skills</h3>
+              <p>websites that provide a good User Experience and look good on all devices.</p>
+            </div>
+            <div class="skill-section-content">
+
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fas fa-headset" alt="icon"></i>
+                  <h4>Customer care</h4>
+                </div>
+                <ul>
+                  <li>Client liaison</li>
+                  <li>Quality Control Standards Compliance</li>
+                  <li>Team worker</li>
+                </ul>
+              </article>
+
+              <article class="skill-article">
+                <div class="skill-title">
+                  <i class="fa-solid fa-cloud-arrow-down"></i>
+                  <h4>Web Hosting</h4>
+                </div>
+                <ul>
+                  <li>domain name registration</li>
+                  <li>domain management</li>
+                  <li>domain email management</li>
+                </ul>
+              </article>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
