skills imgs and desktop bgs

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -145,7 +145,7 @@
     </div>
     <div class="skills container">
       <!-- CONTAINER FOR IO TRANSITIONS -->
-      <div class="io-container io-item io-item">
+      <div class="io-container">
         
         <div class="skills-intro">
           <article class="skills-article">
@@ -216,6 +216,8 @@
             <div class="skill-section-title section-title-1">
               <h3>web accessibility & <br> responsive web design</h3>
               <p>websites that provide a good User Experience and look good on all devices.</p>
+              <!-- <img src="../img/trevor-cole-zMEzuZlmIQY-unsplash.jpg" loading="lazy" alt="Keyboard"> -->
+              <img src="../img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg" loading="lazy" alt="Keyboard">
             </div>
             <div class="skill-section-content">
 
@@ -264,6 +266,8 @@
             <div class="skill-section-title section-title-2">
               <h3>immersive Interface &<br>Engaging Experience</h3>
               <p>websites that provide a good User Experience and look good on all devices.</p>
+              <!-- <img src="../img/quinton-coetzee-gpa8Y_Fk7Rg-unsplash.jpg" loading="lazy" alt="Keyboard"> -->
+              <img src="../img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg" loading="lazy" alt="Keyboard">
             </div>
             <div class="skill-section-content">
 
@@ -308,6 +312,7 @@
             <div class="skill-section-title section-title-3">
               <h3>Version Control &<br>development tools</h3>
               <p>websites that provide a good User Experience and look good on all devices.</p>
+              <img src="../img/hugo-barbosa-TnG2q8FtXsg-unsplash.jpg" loading="lazy" alt="Keyboard">
             </div>
             <div class="skill-section-content">
 
@@ -381,6 +386,7 @@
             <div class="skill-section-title section-title-4">
               <h3>Soft Skills</h3>
               <p>websites that provide a good User Experience and look good on all devices.</p>
+              <img src="../img//markus-winkler-UP_RojtnvTU-unsplash.jpg" loading="lazy" alt="Keyboard">
             </div>
             <div class="skill-section-content">
 
