--- a/pages/skills.html
+++ b/pages/skills.html
@@ -384,7 +384,7 @@
 
           <div class="skill-section section-4 light-section">
             <div class="skill-section-title section-title-4">
-              <h3>Soft Skills</h3>
+              <h3>Interpersonal & <br> Soft Skills</h3>
               <p>websites that provide a good User Experience and look good on all devices.</p>
               <img src="../img//markus-winkler-UP_RojtnvTU-unsplash.jpg" loading="lazy" alt="Keyboard">
             </div>
