--- a/pages/skills.html
+++ b/pages/skills.html
@@ -266,8 +266,9 @@
             <div class="skill-section-title section-title-2">
               <h3>immersive Interface &<br>Engaging Experience</h3>
               <p>websites that provide a good User Experience and look good on all devices.</p>
-              <img src="../img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+              <!-- <img src="../img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg" loading="lazy" alt="Keyboard"> -->
               <!-- <img src="../img//nadine-shaabana-0xD40qm07X0-unsplash-min.jpg" loading="lazy" alt="Keyboard"> -->
+              <img src="../img/woliul-hasan-Qg-rmOecwJQ-unsplash.jpg" loading="lazy" alt="Keyboard">
             </div>
             <div class="skill-section-content">
 
