--- a/pages/skills.html
+++ b/pages/skills.html
@@ -351,13 +351,13 @@
 
               <article class="skill-article">
                 <div class="skill-title">
-                  <i class="fa-brands fa-hive"></i>
-                  <h4>Netlify</h4>
+                  <i class="fa-solid fa-cloud-arrow-down"></i>
+                  <h4>Web Hosting</h4>
                 </div>
-                  <ul>
-                    <li>Static websites</li>
-                    <li>Responsive websites </li>
-                  </ul>
+                <ul>
+                  <li>domain & email management</li>
+                  <li>domain  management</li>
+                </ul>
               </article>
 
               <article class="skill-article">
@@ -387,7 +387,9 @@
             <div class="skill-section-title section-title-4">
               <h3>Interpersonal & <br> Soft Skills</h3>
               <p>websites that provide a good User Experience and look good on all devices.</p>
-              <img src="../img//markus-winkler-UP_RojtnvTU-unsplash.jpg" loading="lazy" alt="Keyboard">
+              <!-- <img src="../img//markus-winkler-UP_RojtnvTU-unsplash.jpg" loading="lazy" alt="Keyboard"> -->
+              <!-- <img src="https://images.unsplash.com/photo-1504198070170-4ca53bb1c1fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" loading="lazy" alt="Keyboard"> -->
+              <img src="../img/ron-mcclenny-O7oOcJwfOQ4-unsplash.jpg" loading="lazy" alt="Keyboard">
             </div>
             <div class="skill-section-content">
 
@@ -403,7 +405,7 @@
                 </ul>
               </article>
 
-              <article class="skill-article">
+              <!-- <article class="skill-article">
                 <div class="skill-title">
                   <i class="fa-solid fa-cloud-arrow-down"></i>
                   <h4>Web Hosting</h4>
@@ -413,7 +415,7 @@
                   <li>domain management</li>
                   <li>domain email management</li>
                 </ul>
-              </article>
+              </article> -->
             </div>
           </div>
 
