--- a/pages/skills.html
+++ b/pages/skills.html
@@ -386,7 +386,7 @@
           <div class="skill-section section-4 light-section">
             <div class="skill-section-title section-title-4">
               <h3>Interpersonal & <br> Soft Skills</h3>
-              <p>websites that provide a good User Experience and look good on all devices.</p>
+              <p>Communication & team work skills</p>
               <!-- <img src="../img//markus-winkler-UP_RojtnvTU-unsplash.jpg" loading="lazy" alt="Keyboard"> -->
               <!-- <img src="https://images.unsplash.com/photo-1504198070170-4ca53bb1c1fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" loading="lazy" alt="Keyboard"> -->
               <img src="../img/ron-mcclenny-O7oOcJwfOQ4-unsplash.jpg" loading="lazy" alt="Keyboard">
