about page col-left & botton nav links

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
         </div>
       </div>
       <div class="col-left">
-        <figure class="about-img">
+        <figure class="about-img animated-img">
           <img src="img/me-min.jpg" loading="lazy" alt="Boitumelo Shakex Sempe">
         </figure>
       </div>
