--- a/pages/about.html
+++ b/pages/about.html
@@ -230,7 +230,7 @@
                 </div>
                 <div class="col-left">
                     <figure class="about-img">
-                        <img src="img/me-min.jpg" loading="lazy" alt="Boitumelo Shakex Sempe">
+                        <img src="../img/me-min.jpg" loading="lazy" alt="Boitumelo Shakex Sempe">
                     </figure>
                 </div>
             </div>
@@ -434,14 +434,14 @@
     </main>
     <!-- BOTTOM NAVIGATION -->
     <div class="bottom-nav" id="bottom-nav">
-        <figure class="link-item io-item item io-item-1">
-            <a href="https://wa.me/+27716876941"><i class="fa-brands fa-whatsapp"></i>WhatsApp</a>
-        </figure>
         <figure class="link-item io-item item io-item-2">
-            <a href="../index.html"><i class="fas fa-house"></i>home</a>
+            <a href="../index.html"><i class="fas fa-house"></i></a>
+        </figure>
+        <figure class="link-item io-item item io-item-1">
+            <a href="#"><i class="fas fa-arrow-up"></i></a>
         </figure>
         <figure class="link-item io-item item io-item-3">
-            <a href="mailto:bshakex@gmail.com"><i class="fas fa-envelope"></i>email</a>
+            <a href="#contact"><i class="fas fa-envelope"></i></a>
         </figure>
     </div>
     <!-- PRELOADER SCRIPT -->
