skills page itesm height

--- a/index.html
+++ b/index.html
@@ -768,13 +768,13 @@
 <!-- BOTTOM NAVIGATION -->
 <div class="bottom-nav" id="bottom-nav">
   <figure class="link-item io-item item io-item-1">
-    <a href="https://wa.me/+27716876941"><i class="fa-brands fa-whatsapp"></i>WhatsApp</a>
+    <a href="https://wa.me/+27716876941"><i class="fa-brands fa-whatsapp"></i></a>
   </figure>
   <figure class="link-item io-item item io-item-2">
-    <a href="#home"><i class="fas fa-house"></i>home</a>
+    <a href="#home"><i class="fas fa-house"></i></a>
   </figure>
   <figure class="link-item io-item item io-item-3">
-    <a href="mailto:bshakex@gmail.com"><i class="fas fa-envelope"></i>email</a>
+    <a href="#contact"><i class="fas fa-envelope"></i></a>
   </figure>
 </div>
 <!-- PRELOADER SCRIPT -->
