section and page paddings

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -139,11 +139,11 @@
   <!--  END OF MENU -->
   <main id="main" data-main>
   <!-- SKILLS SECTION-->
-  <section class="skills-section link-section" id="skills">
+  <section class="skills-section skills-section-page link-section" id="skills">
     <div class="skills-header">
       <h2 title="skills" data-text="skills" class="section-title io-item io-item">Sk<span>i</span>lls</h2>
     </div>
-    <div class="skills container">
+    <div class="skills-content container">
       <!-- CONTAINER FOR IO TRANSITIONS -->
       <div class="io-container">
         
@@ -550,7 +550,7 @@
         <!-- end of social media links -->
         <!-- contact form -->
         <form class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
-          <h2 data-scroll class="footer-section-title contact">Get In Touch</h2>
+          <h2 data-scroll class="footer-section-title">Get In Touch</h2>
 
           <div class="input-div">
             <label for="name">name :</label>
