--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <div class="skills-header">
       <h2 title="skills" data-text="skills" class="section-title io-item io-item">Sk<span>i</span>lls</h2>
     </div>
-    <div class="skills">
+    <div class="skills-content">
       <!-- CONTAINER FOR IO TRANSITIONS -->
       <div class="io-container io-item">
         <div class="skills-intro">
@@ -568,7 +568,7 @@
     <div class="contact container">
       <div class="contact-header">
         <!-- <h2 title="contact information" data-text="contactinfo" class="section-title io-item io-item">Contact<span>Info</span></h2> -->
-        <h2 title="contact information" data-text="contactinfo" class="section-title io-item io-item">
+        <h2 title="contact information" data-text="contactinfo" class="section-title io-item">
           Contact<span>Info</span></h2>
       </div>
       <div class="contact-items">
@@ -699,7 +699,7 @@
         <!-- end of social media links -->
         <!-- contact form -->
         <form class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
-          <h2 data-scroll class="footer-section-title contact">Get In Touch</h2>
+          <h2 data-scroll class="footer-section-title">Get In Touch</h2>
 
           <div class="input-div">
             <label for="name">name :</label>
