--- a/pages/work.html
+++ b/pages/work.html
@@ -452,7 +452,7 @@
                     <!-- contact form -->
                     <form class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com"
                         method="POST">
-                        <h2 data-scroll class="footer-section-title contact">Get In Touch</h2>
+                        <h2 data-scroll class="footer-section-title">Get In Touch</h2>
 
                         <div class="input-div">
                             <label for="name">name :</label>
