active nav links

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -74,28 +74,35 @@
           </div>
           <div class="links-container" data-linksContainer>
             <ul class="links">
+              <!-- HOME LINK -->
+              <li>
+                <i class="fas fa-lightbulb"></i>
+                <a href="#" title="web development skills" data-after="skills"
+                  class="scroll-link scroll-li">home</a>
+              </li>
               <!-- SKILLS LINK -->
               <li>
                 <i class="fas fa-lightbulb"></i>
-                <a href="#skills" title="web development skills" data-after="skills"
+                <a href="pages/skills.html" title="web development skills" data-link data-after="skills"
                   class="scroll-link scroll-li">skills</a>
-              </li>
-              <!-- WORK[PROJECTS] LINK -->
-              <li>
-                <i class="fa-solid fa-earth-africa"></i>
-                <a href="#work" title="github repositories" data-after="Projects"
-                  class="scroll-link scroll-li">projects</a>
               </li>
               <!-- ABOUT LINK -->
               <li>
                 <i class="fas fa-user-circle"></i>
-                <a href="#about" title="about Boitumelo Sempe" data-after="About"
+                <a href="pages/about.html" title="about Boitumelo Sempe" data-link data-after="About"
                   class="scroll-link scroll-li">about</a>
               </li>
+              <!-- WORK[PROJECTS] LINK -->
+              <li>
+                <i class="fa-solid fa-earth-africa"></i>
+                <a href="pages/work.html" title="github repositories" data-link data-after="Projects"
+                  class="scroll-link scroll-li">projects</a>
+              </li>
+              
               <!-- CONTACT LINK -->
               <li>
                 <i class="fas fa-address-book"></i>
-                <a href="#contact" title="contact-info" data-after="Contact" class="scroll-link scroll-li">contact</a>
+                <a href="#contact" title="contact-info" data-link data-after="Contact" class="scroll-link">contact</a>
               </li>
               <!-- PROJECTS[PORTFOLIO] LINK -->
               <!-- <li>
