--- a/pages/about.html
+++ b/pages/about.html
@@ -69,46 +69,53 @@
                     </div>
                     <div class="links-container" data-linksContainer>
                         <ul class="links">
+                            <!-- HOME LINK -->
+                            <li>
+                                <i class="fas fa-lightbulb"></i>
+                                <a href="../index.html" title="web development skills" data-after="skills"
+                                    class="scroll-link scroll-li">home</a>
+                            </li>
                             <!-- SKILLS LINK -->
                             <li>
                                 <i class="fas fa-lightbulb"></i>
-                                <a href="#skills" title="web development skills" data-after="skills"
+                                <a href="pages/skills.html" title="web development skills" data-link data-after="skills"
                                     class="scroll-link scroll-li">skills</a>
-                            </li>
-                            <!-- WORK[PROJECTS] LINK -->
-                            <li>
-                                <i class="fa-solid fa-earth-africa"></i>
-                                <a href="#work" title="github repositories" data-after="Projects"
-                                    class="scroll-link scroll-li">projects</a>
                             </li>
                             <!-- ABOUT LINK -->
                             <li>
                                 <i class="fas fa-user-circle"></i>
-                                <a href="#about" title="about Boitumelo Sempe" data-after="About"
+                                <a href="#" title="about Boitumelo Sempe" data-link data-after="About"
                                     class="scroll-link scroll-li">about</a>
                             </li>
+                            <!-- WORK[PROJECTS] LINK -->
+                            <li>
+                                <i class="fa-solid fa-earth-africa"></i>
+                                <a href="work.html" title="github repositories" data-link data-after="Projects"
+                                    class="scroll-link scroll-li">projects</a>
+                            </li>
+
                             <!-- CONTACT LINK -->
                             <li>
                                 <i class="fas fa-address-book"></i>
-                                <a href="#contact" title="contact-info" data-after="Contact"
-                                    class="scroll-link scroll-li">contact</a>
+                                <a href="#contact" title="contact-info" data-link data-after="Contact"
+                                    class="scroll-link">contact</a>
                             </li>
                             <!-- PROJECTS[PORTFOLIO] LINK -->
                             <!-- <li>
-                <i class="fab fa-github"></i>
-                <a href="#projects" title="github repositories" data-after="portfolio"
-                  class="scroll-link scroll-li">portfolio</a>
-              </li> -->
+                            <i class="fab fa-github"></i>
+                            <a href="#projects" title="github repositories" data-after="portfolio"
+                              class="scroll-link scroll-li">portfolio</a>
+                          </li> -->
                             <!-- SOCIALS -->
                             <!-- <li>
-                <i class="fas fa-user-friends"></i>
-                <a href="#footer" title="social-links" data-after="Socials" class="scroll-link scroll-li">socials</a>
-              </li> -->
+                            <i class="fas fa-user-friends"></i>
+                            <a href="#footer" title="social-links" data-after="Socials" class="scroll-link scroll-li">socials</a>
+                          </li> -->
                             <!-- FORM -->
                             <!-- <li>
-                <i class="fas fa-at"></i>
-                <a href="forms/form.html" title="contact-form" data-after="form" class="scroll-li">form</a>
-              </li> -->
+                            <i class="fas fa-at"></i>
+                            <a href="forms/form.html" title="contact-form" data-after="form" class="scroll-li">form</a>
+                          </li> -->
 
                         </ul>
                         <div class="contact-links">
