--- a/pages/work.html
+++ b/pages/work.html
@@ -531,15 +531,15 @@
     </main>
     <!-- BOTTOM NAVIGATION -->
     <div class="bottom-nav" id="bottom-nav">
-        <figure class="link-item io-item item io-item-1">
-            <a href="https://wa.me/+27716876941"><i class="fa-brands fa-whatsapp"></i>WhatsApp</a>
-        </figure>
-        <figure class="link-item io-item item io-item-2">
-            <a href="../index.html"><i class="fas fa-house"></i>home</a>
-        </figure>
-        <figure class="link-item io-item item io-item-3">
-            <a href="mailto:bshakex@gmail.com"><i class="fas fa-envelope"></i>email</a>
-        </figure>
+        <div class="link-item io-item item io-item-2">
+            <a href="../index.html"><i class="fas fa-house"></i></a>
+        </div>
+        <div class="link-item io-item item io-item-1">
+            <a href="#main"><i class="fas fa-arrow-up"></i></a>
+        </div>
+        <div class="link-item io-item item io-item-3">
+            <a href="#contact"><i class="fas fa-envelope"></i></a>
+        </div>
     </div>
     <!-- PRELOADER SCRIPT -->
     <script>
