--- a/pages/about.html
+++ b/pages/about.html
@@ -78,7 +78,7 @@
                             <!-- SKILLS LINK -->
                             <li>
                                 <i class="fas fa-lightbulb"></i>
-                                <a href="pages/skills.html" title="web development skills" data-link data-after="skills"
+                                <a href="skills.html" title="web development skills" data-link data-after="skills"
                                     class="scroll-link scroll-li">skills</a>
                             </li>
                             <!-- ABOUT LINK -->
