--- a/pages/about.html
+++ b/pages/about.html
@@ -72,7 +72,7 @@
                             <!-- HOME LINK -->
                             <li>
                                 <i class="fas fa-lightbulb"></i>
-                                <a href="../index.html" title="web development skills" data-after="skills"
+                                <a href="../index.html" title="web development skills" data-after="Home"
                                     class="scroll-link scroll-li">home</a>
                             </li>
                             <!-- SKILLS LINK -->
