--- a/pages/skills.html
+++ b/pages/skills.html
@@ -70,7 +70,7 @@
               <!-- HOME LINK -->
               <li>
                 <i class="fas fa-lightbulb"></i>
-                <a href="../index.html" title="web development skills" data-after="skills"
+                <a href="../index.html" title="web development skills" data-after="home"
                   class="scroll-link scroll-li">home</a>
               </li>
               <!-- SKILLS LINK -->
