--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
   </figure>
 </div>
 
-<script src="js/app.js" defer></script>
+<script src="js/app.js"></script>
 <!-- PRELOADER SCRIPT -->
 <script>
   setTimeout(function () {
