--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -77,7 +77,7 @@
               <li>
                 <i class="fas fa-lightbulb"></i>
                 <a href="#" title="web development skills" data-after="Home"
-                  class="scroll-link scroll-li">home</a>
+                  class="scroll-link scroll-li active">home</a>
               </li>
               <!-- SKILLS LINK -->
               <li>
