--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <!-- JAVASCRIPT -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" defer referrerpolicy="no-referrer"></script>
   <script src="js/projects.js" defer></script>
+  <script src="js/app.js" defer></script>
 
 </head>
 
@@ -784,8 +785,8 @@
   </figure>
 </div>
 
-<script src="js/app.js"></script>
 <!-- PRELOADER SCRIPT -->
+
 <script>
   setTimeout(function () {
     $('.loader_bg').fadeToggle();
