--- a/pages/skills.html
+++ b/pages/skills.html
@@ -649,6 +649,18 @@
     <a href="#contact"><i class="fas fa-envelope"></i></a>
   </div>
 </div>
+<!-- ACTIVE PAGE CLASS TOGGLE -->
+<script>
+  const activePage = window.location.pathname;
+  const navLinks = document.querySelectorAll('.scroll-li');
+  console.log(activePage);
+
+  navLinks.forEach(link => {
+    if (link.href.includes(`${activePage}`)) {
+      link.classList.add('active');
+    }
+  });
+</script>
 <!-- PRELOADER SCRIPT -->
 <script>
   setTimeout(function () {
