--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </div>
     <div class="skills-content">
       <!-- CONTAINER FOR IO TRANSITIONS -->
-      <div class="io-container io-item">
+      <div class="io-container">
         <div class="skills-intro">
           
           <article class="skills-article">
@@ -193,38 +193,51 @@
         <div class="skill-section-container">
           <div class="skill-section section-1">
             <div class="skill-section-title section-title-1">
-              <h3>web accessibility & <br> responsive web design</h3>
-              <p>websites that provide a good User Experience and look good on all devices.</p>
-              <!-- <img src="../img/trevor-cole-zMEzuZlmIQY-unsplash.jpg" loading="lazy" alt="Keyboard"> -->
               <img src="../img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg" loading="lazy" alt="Keyboard">
+              <h3>web accessibility & <br> responsive web design</h3>
+              <p>User friendly websites look good on all devices.</p>
+              <ul>
+                <li>HTML-5</li>
+                <li>CSS-3</li>
+                <li>Javascript</li>
+              </ul>
             </div>
           </div>
 
           <div class="skill-section section-2">
             <div class="skill-section-title section-title-2">
-              <h3>immersive Interface &<br>Engaging Experience</h3>
-              <p>websites that provide a good User Experience and look good on all devices.</p>
-              <!-- <img src="../img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg" loading="lazy" alt="Keyboard"> -->
-              <!-- <img src="../img//nadine-shaabana-0xD40qm07X0-unsplash-min.jpg" loading="lazy" alt="Keyboard"> -->
               <img src="../img/martin-katler-o9XN28KdyN8-unsplash.jpg" loading="lazy" alt="Keyboard">
+              <h3>immersive Interface &<br>Engaging Experience</h3>
+              <p>User friendly websites look good on all devices.</p>
+              <ul>
+                <li>HTML-5</li>
+                <li>CSS-3</li>
+                <li>Javascript</li>
+              </ul>
             </div>
           </div>
 
           <div class="skill-section section-3 light-section">
             <div class="skill-section-title section-title-3">
               <h3>Version Control &<br>development tools</h3>
-              <p>websites that provide a good User Experience and look good on all devices.</p>
               <img src="../img/hugo-barbosa-TnG2q8FtXsg-unsplash.jpg" loading="lazy" alt="Keyboard">
+              <p>User friendly websites look good on all devices.</p>
+              <ul>
+                <li>HTML-5</li>
+                <li>CSS-3</li>
+                <li>Javascript</li>
+              </ul>
             </div>
           </div>
 
           <div class="skill-section section-4 light-section">
             <div class="skill-section-title section-title-4">
+              <img src="../img/liana-mikah-sK1nYjXcXCY-unsplash.jpg" loading="lazy" alt="Keyboard">
               <h3>Interpersonal & <br> Soft Skills</h3>
               <p>Communication & team work skills</p>
-              <!-- <img src="../img//markus-winkler-UP_RojtnvTU-unsplash.jpg" loading="lazy" alt="Keyboard"> -->
-              <!-- <img src="https://images.unsplash.com/photo-1504198070170-4ca53bb1c1fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" loading="lazy" alt="Keyboard"> -->
-              <img src="../img/liana-mikah-sK1nYjXcXCY-unsplash.jpg" loading="lazy" alt="Keyboard">
+              <ul>
+                <li>Customer Care</li>
+              </ul>
             </div>
           </div>
 
