--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <div class="skill-section-title section-title-4">
               <img src="../img/liana-mikah-sK1nYjXcXCY-unsplash.jpg" loading="lazy" alt="Keyboard">
               <h3>Interpersonal & <br> Soft Skills</h3>
-              <p>Communication & team work skills</p>
+              <p>Communication & Team work skills</p>
               <ul>
                 <li>Customer Care</li>
               </ul>
