skills section copy

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                 <li>CSS-3</li>
                 <li>Javascript</li>
               </ul>
+              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -210,10 +211,11 @@
               <h3>immersive Interface &<br>Engaging Experience</h3>
               <p>User friendly websites look good on all devices.</p>
               <ul>
-                <li>HTML-5</li>
-                <li>CSS-3</li>
-                <li>Javascript</li>
+                <li>Sass</li>
+                <li>React-JS</li>
+                <li>JQuery</li>
               </ul>
+              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -223,10 +225,12 @@
               <img src="../img/hugo-barbosa-TnG2q8FtXsg-unsplash.jpg" loading="lazy" alt="Keyboard">
               <p>User friendly websites look good on all devices.</p>
               <ul>
-                <li>HTML-5</li>
-                <li>CSS-3</li>
-                <li>Javascript</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Node-JS</li>
+                <li>Visual Studio Code</li>
               </ul>
+              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -237,7 +241,9 @@
               <p>Communication & Team work skills</p>
               <ul>
                 <li>Customer Care</li>
+                <li>Creativity</li>
               </ul>
+              <a href="pages/skills.html">read more<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
