--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="skill-section-container">
           <div class="skill-section section-1">
             <div class="skill-section-title section-title-1">
-              <img src="../img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg" loading="lazy" alt="Keyboard">
+              <img src="img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg" loading="lazy" alt="Keyboard">
               <h3>web accessibility & <br> responsive web design</h3>
               <p>User friendly websites look good on all devices.</p>
               <ul>
@@ -207,7 +207,7 @@
 
           <div class="skill-section section-2">
             <div class="skill-section-title section-title-2">
-              <img src="../img/martin-katler-o9XN28KdyN8-unsplash.jpg" loading="lazy" alt="Keyboard">
+              <img src="img/martin-katler-o9XN28KdyN8-unsplash.jpg" loading="lazy" alt="Keyboard">
               <h3>immersive Interface &<br>Engaging Experience</h3>
               <p>User friendly websites look good on all devices.</p>
               <ul>
@@ -222,7 +222,7 @@
           <div class="skill-section section-3 light-section">
             <div class="skill-section-title section-title-3">
               <h3>Version Control &<br>development tools</h3>
-              <img src="../img/hugo-barbosa-TnG2q8FtXsg-unsplash.jpg" loading="lazy" alt="Keyboard">
+              <img src="img/hugo-barbosa-TnG2q8FtXsg-unsplash.jpg" loading="lazy" alt="Keyboard">
               <p>User friendly websites look good on all devices.</p>
               <ul>
                 <li>Git</li>
@@ -236,7 +236,7 @@
 
           <div class="skill-section section-4 light-section">
             <div class="skill-section-title section-title-4">
-              <img src="../img/liana-mikah-sK1nYjXcXCY-unsplash.jpg" loading="lazy" alt="Keyboard">
+              <img src="img/liana-mikah-sK1nYjXcXCY-unsplash.jpg" loading="lazy" alt="Keyboard">
               <h3>Interpersonal & <br> Soft Skills</h3>
               <p>Communication & Team work skills</p>
               <ul>
